src/tests/errors/structs/007.ura
// errors/structs/007 — accessing an undefined field
use "@/header"

struct Point:
    x int
    y int

main():
    p Point
    p.x = 1
    p.z = 5
