src/tests/errors/structs/007.err
[1m[0;31merror: [0m'Point' has no field 'z'
   [1m[34m-->[0m src/tests/errors/structs/007.ura:11:7
   [1m[34m|[0m
[1m[34m11 |[0m     p.z = 5
   [1m[34m|[0m       [1;31m^[0m
